# comdirect_api

./: .gitignore  Cargo.toml
src/: api_interface.rs  cost_indication.rs  deposit.rs  error.rs  instrument.rs  interface.rs  lib.rs  market_place.rs  order.rs  order_outline.rs  position.rs  session.rs  tan.rs  temp.json  transaction.rs
src/api_types/: cost_indication.rs  market_place.rs  mod.rs  position.rs  transaction.rs
src/api_types/order/: execution.rs  mod.rs  order_change.rs  order_outline.rs
src/interface/: deposit.rs  instrument.rs  mod.rs  order.rs  quote.rs  session.rs
src/serde/: amount_value.rs  auction_type.rs  comdirect_position.rs  date.rs  date_time.rs  deposit.rs  execution.rs  instrument.rs  market_place.rs  mod.rs  naive_date.rs  order.rs  order_direction.rs  order_status.rs  order_type.rs  order_type_abilities.rs  order_type_extension.rs  order_validity.rs  position.rs  time_bounded_price.rs  time_bounded_unit_value.rs  transaction.rs
src/session/: mod.rs  tan.rs
src/types/: cost_indication.rs  deposit.rs  instrument.rs  market_place.rs  mod.rs  position.rs  transaction.rs
src/types/order/: execution.rs  mod.rs  order_change.rs  order_outline.rs
src/types/quote/: mod.rs  order_outline.rs
tests/: api_interface.rs  interface.rs  tests.rs
