[package]
name = "comdirect_api"
version = "0.1.0"
authors = ["Dzenan Jupic <info@dzenanjupic.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version="0.10.7", features=["blocking", "cookies", "json"]}
rand = "0.7.3"
serde_json = "1.0.56"
chrono = "0.4.13"
