[package]
name = "comdirect_api"
version = "0.1.0"
authors = ["Dzenan Jupic <info@dzenanjupic.de>"]
edition = "2018"

[dependencies]
derive_more = "0.99.9"
derive_builder = "0.9.0"
getset = "0.1.1"
reqwest = { version = "0.10.7", features = ["blocking", "cookies", "json"] }
rand = "0.7.3"
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.56"
chrono = "0.4.13"

pecunia = { path = "C:/Users/info/Code/Rust/pecunia", version = "0.1.0" }
stock-market-utils = { path = "C:/Users/info/Code/Rust/stock-market-utils", version = "0.1.0" }

[dev-dependencies]
lazy_static = "1.4.0"

[features]
test = []
